# ltp-platform

./: .gitmodules  nuget.config  owners.txt  paictl.py
.azure-pipelines/: cluster-update-all.yml  cluster-update-changes.yml
.github/: CODEOWNERS  dependabot.yml
dashboard/: ltp_productivity.pbip
deployment/: checkCmd.py  configCmd.py  layoutCmd.py  utilityCmd.py
docs/: service_update.md
src/copilot-chat/src/: pyproject.toml  requirements.txt
src/copilot-chat/src/copilot_agent/: __init__.py  __main__.py  _version.py  config.py  copilot.py  copilot_agent.py  copilot_conversation.py  copilot_service.py  copilot_turn.py
src/copilot-chat/src/copilot_agent/agent_flow/: __init__.py  agent_flow.py  agent_orchastrate.py  agent_tool.py
src/copilot-chat/src/copilot_agent/data/: __init__.py
src/copilot-chat/src/copilot_agent/data/LTP/manual/setting/: placeholders.json
src/copilot-chat/src/copilot_agent/data/LTP/rag/kusto/: JobReactTime.json  NodeActionAttributes.json  NodeStatusAttributes.json  PreNodeStatusRecord.json  _examples.txt  _operators.txt  _relationships.txt
src/copilot-chat/src/copilot_agent/data/authorized_users/: authorized_users.json
src/copilot-chat/src/copilot_agent/data/demoM3_LTP/rag/kusto/: ClusterVMSSInfo.json  JobReactTime.json  JobSummary.json  NodeActionAttributes.json  NodeActionRecord.json  NodeStatusAttributes.json  NodeStatusRecord.json  PBICacheClusterCapacityStatus.json  PreNodeActionRecord.json  PreNodeStatusRecord.json  VMInfo.json  _examples.txt  _examples_from_data.txt  _knowledge.txt
src/copilot-chat/src/copilot_agent/data/demoM3_LTP/report/: ltp_dashboard_data_model  ltp_dashboard_data_model_long.json  ltp_dashboard_data_model_short.json
src/copilot-chat/src/copilot_agent/data/sqldb/: __init__.py
src/copilot-chat/src/copilot_agent/data/sqldb/test/: data.csv  data.db  schema.txt
src/copilot-chat/src/copilot_agent/ltp/: __init__.py  ltp.py  ltp_dashboard.py  ltp_manual.py
src/copilot-chat/src/copilot_agent/prompts/: __init__.py  analysis_projected_template.txt  analysis_task_component_expectation.txt  analysis_task_e2e_rca.txt  analysis_task_template.txt  gen_dcw_prompt.txt  gen_smart_help_prompt.txt  gen_smart_help_prompt_general.txt  general_analysis.txt  interpret_prompt.txt  predict_infrasturcture_profile_envelope.txt  predict_workload_profile_characteristics.txt  query_template.txt  rapid_decision_making.txt
src/copilot-chat/src/copilot_agent/prompts/classification/: __init__.py
src/copilot-chat/src/copilot_agent/prompts/classification/f3/: lv0.txt  lv1.txt  lv1backup.txt
src/copilot-chat/src/copilot_agent/prompts/classification/f4/: classify.txt  examples.txt
src/copilot-chat/src/copilot_agent/prompts/dialouge_state_tracking/: dst.txt
src/copilot-chat/src/copilot_agent/prompts/help/: infrawise_help_f3.json
src/copilot-chat/src/copilot_agent/prompts/ltp/: gen_query_promql_metrics.txt  gen_result_summary_dashboard.txt  gen_result_summary_doc.txt  gen_result_summary_human.txt  gen_result_summary_metadata.txt  gen_result_summary_rejection.txt  knowledge.txt  ltp_documentation.txt  ltp_documentation_20250624.txt
src/copilot-chat/src/copilot_agent/utils/: __init__.py  analysis.py  authentication.py  classify.py  conversation_manager.py  dcw.py  kql_executor.py  llmsession.py  logger.py  math.py  message.py  openpai.py  powerbi.py  promql.py  push_frontend.py  query.py  rag.py  restapi.py  smart_help.py  sql.py  summary.py  time.py  types.py  utils.py
tools/: addBlobStorage.py  deleteGroup.py  (+11 more)
(+875 files in other folders)
